syntax = "proto3";

import "main_account.proto";

package api_main;

service Main {
    rpc ClientRequestHandleProto(ClientRequestHandleReq) returns (ClientRequestHandleRes) {};
    rpc ClientRequestHandleJson(ClientRequestHandleReq) returns (ClientRequestHandleRes) {};
}

message ClientRequestHandleReq {
    uint32 msgID = 1;
    bytes Payload = 2;
    im_main_proto.ClientOnlineInfo Client = 3;
}

message ClientRequestHandleRes {
    int32 ErrCode = 1;
    uint32 msgID = 2;
    bytes Payload = 3;
    im_main_proto.ClientOnlineInfo Client = 4;
}